[gd_scene load_steps=6 format=3 uid="uid://c67ts4jblm1ga"]

[ext_resource type="Texture2D" uid="uid://b0p6lephwu67s" path="res://assets/hud/grey_overlay.png" id="1_6rmm1"]
[ext_resource type="Script" path="res://screens/preparation/components/combatant_for_sale/combatant_for_sale.gd" id="1_vq8yf"]
[ext_resource type="PackedScene" uid="uid://dy1oc5vnd2dpg" path="res://view/combatant_sprite_thumbnail/combatant_sprite_thumbnail.tscn" id="3_qk8jb"]
[ext_resource type="PackedScene" uid="uid://bpddpej0qo1sh" path="res://screens/preparation/components/price_button/price_button.tscn" id="4_6d3oy"]
[ext_resource type="Theme" uid="uid://cgj53xbuypu2k" path="res://assets/theme/theme.tres" id="4_c4v4n"]

[node name="CombatantForSale" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(90, 69)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vq8yf")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(90, 65)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.5
offset_right = 32.5
offset_bottom = 65.0
grow_horizontal = 2
texture = ExtResource("1_6rmm1")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="CombatantSpriteThumbnail" parent="NinePatchRect" instance=ExtResource("3_qk8jb")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -3.0
offset_right = -38.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4

[node name="CombatantType" type="Label" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -25.0
offset_right = 39.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 6
theme = ExtResource("4_c4v4n")
theme_override_colors/font_shadow_color = Color(0.0980392, 0.0784314, 0.145098, 1)
theme_override_font_sizes/font_size = 16
text = "Dwarf warrior"
horizontal_alignment = 1

[node name="BuyButton" parent="." instance=ExtResource("4_6d3oy")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -13.5
offset_right = 45.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 0
action = "Buy"
